[gd_scene load_steps=9 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://mainTheme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backgroundColor" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fileButton" type="MenuButton" parent="."]
margin_left = 10.0
margin_right = 50.0
margin_bottom = 30.0
theme = ExtResource( 3 )
text = "File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="editButton" type="MenuButton" parent="."]
margin_left = 50.0
margin_right = 100.0
margin_bottom = 30.0
theme = ExtResource( 3 )
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messageBox" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 30.0
margin_right = 750.0
margin_bottom = 550.0
focus_mode = 2
custom_styles/normal = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connectedBox" type="ItemList" parent="."]
margin_left = 760.0
margin_top = 30.0
margin_right = 1010.0
margin_bottom = 340.0
theme = ExtResource( 3 )
custom_styles/bg = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statusBox" type="ItemList" parent="."]
margin_left = 760.0
margin_top = 360.0
margin_right = 1010.0
margin_bottom = 590.0
theme = ExtResource( 3 )
custom_styles/bg = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inputText" type="LineEdit" parent="."]
margin_left = 10.0
margin_top = 560.0
margin_right = 750.0
margin_bottom = 589.0
custom_fonts/font = SubResource( 5 )
max_length = 255
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joinPopup" type="Popup" parent="."]
margin_left = 290.0
margin_top = 130.0
margin_right = 550.0
margin_bottom = 410.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="joinPopup"]
margin_right = 260.0
margin_bottom = 280.0
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="portLabel" type="Label" parent="joinPopup"]
margin_left = 10.0
margin_top = 50.0
margin_right = 47.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 1, 12.5 )
theme = ExtResource( 3 )
text = "Port: "
valign = 1

[node name="portInput" type="LineEdit" parent="joinPopup"]
margin_left = 190.0
margin_top = 50.0
margin_right = 248.0
margin_bottom = 79.0
theme = ExtResource( 3 )
text = "4242"
max_length = 6

[node name="ipLabel" type="Label" parent="joinPopup"]
margin_left = 10.0
margin_top = 10.0
margin_right = 45.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 1, 12.5 )
theme = ExtResource( 3 )
text = "IP: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ipInput" type="LineEdit" parent="joinPopup"]
margin_left = 110.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 39.0
theme = ExtResource( 3 )
text = "127.0.0.1"
align = 2
max_length = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joinButton" type="Button" parent="joinPopup"]
margin_left = 110.0
margin_top = 240.0
margin_right = 153.0
margin_bottom = 265.0
theme = ExtResource( 3 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passLabel" type="Label" parent="joinPopup"]
margin_left = 10.0
margin_top = 90.0
margin_right = 88.0
margin_bottom = 109.0
theme = ExtResource( 3 )
text = "Password: "

[node name="passInput" type="LineEdit" parent="joinPopup"]
margin_left = 10.0
margin_top = 120.0
margin_right = 250.0
margin_bottom = 144.0
theme = ExtResource( 3 )
secret = true

[node name="hostPopup" type="Popup" parent="."]
margin_left = 240.0
margin_top = 110.0
margin_right = 560.0
margin_bottom = 410.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="hostPopup"]
margin_right = 320.0
margin_bottom = 300.0
color = Color( 0.176471, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="hostPopup"]
margin_left = 10.0
margin_top = 170.0
margin_right = 47.0
margin_bottom = 195.0
theme = ExtResource( 3 )
text = "Port: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hostPort" type="LineEdit" parent="hostPopup"]
margin_left = 220.0
margin_top = 170.0
margin_right = 308.0
margin_bottom = 199.0
theme = ExtResource( 3 )
text = "4242"
align = 2
max_length = 6

[node name="hostButton" type="Button" parent="hostPopup"]
margin_left = 140.0
margin_top = 270.0
margin_right = 185.0
margin_bottom = 295.0
theme = ExtResource( 3 )
text = "Host"

[node name="networkNameLabel" type="Label" parent="hostPopup"]
margin_left = 10.0
margin_top = 10.0
margin_right = 118.0
margin_bottom = 29.0
theme = ExtResource( 3 )
text = "Network Name:"

[node name="networkName" type="LineEdit" parent="hostPopup"]
margin_left = 10.0
margin_top = 30.0
margin_right = 310.0
margin_bottom = 60.0
theme = ExtResource( 3 )
text = "default"
align = 2

[node name="saveDirLabel" type="Label" parent="hostPopup"]
margin_left = 10.0
margin_top = 70.0
margin_right = 119.0
margin_bottom = 95.0
theme = ExtResource( 3 )
text = "Save Directory:"

[node name="saveDir" type="LineEdit" parent="hostPopup"]
margin_left = 10.0
margin_top = 90.0
margin_right = 309.0
margin_bottom = 119.0
theme = ExtResource( 3 )

[node name="saveBrowseBtn" type="Button" parent="hostPopup"]
margin_left = 240.0
margin_top = 130.0
margin_right = 309.0
margin_bottom = 155.0
theme = ExtResource( 3 )
text = "Browse"

[node name="saveDirPopup" type="FileDialog" parent="hostPopup"]
margin_right = 494.0
margin_bottom = 380.0
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/home/alex/Godot/IdleChat"
current_path = "/home/alex/Godot/IdleChat/"

[node name="passLabel" type="Label" parent="hostPopup"]
margin_left = 10.0
margin_top = 210.0
margin_right = 84.0
margin_bottom = 229.0
theme = ExtResource( 3 )
text = "Password:"

[node name="passInput" type="LineEdit" parent="hostPopup"]
margin_left = 10.0
margin_top = 230.0
margin_right = 310.0
margin_bottom = 259.0
theme = ExtResource( 3 )
align = 2
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="overwriteSave" type="Popup" parent="."]
margin_left = 331.288
margin_top = 179.743
margin_right = 581.288
margin_bottom = 279.743
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="overwriteSave"]
margin_right = 250.0
margin_bottom = 100.0
color = Color( 0.176471, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warningLabel" type="Label" parent="overwriteSave"]
margin_right = 250.0
margin_bottom = 66.0
theme = ExtResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="yesBtn" type="Button" parent="overwriteSave"]
margin_left = 47.521
margin_top = 70.092
margin_right = 110.521
margin_bottom = 96.092
theme = ExtResource( 3 )
text = "YES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="noBtn" type="Button" parent="overwriteSave"]
margin_left = 130.666
margin_top = 71.4618
margin_right = 184.666
margin_bottom = 96.4618
theme = ExtResource( 3 )
text = "NO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userSettingsPopup" type="Popup" parent="."]
margin_left = 290.0
margin_top = 130.0
margin_right = 590.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="userSettingsPopup"]
margin_right = 300.0
margin_bottom = 310.0
color = Color( 0.176471, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usernameLabel" type="Label" parent="userSettingsPopup"]
margin_left = 10.0
margin_top = 10.0
margin_right = 100.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 1, 12.5 )
theme = ExtResource( 3 )
text = "User name: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userColorLabel" type="Label" parent="userSettingsPopup"]
margin_left = 10.0
margin_top = 110.0
margin_right = 150.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 1, 12.5 )
theme = ExtResource( 3 )
text = "User BBCode Color: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usernameInput" type="LineEdit" parent="userSettingsPopup"]
margin_left = 100.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 40.0
focus_next = NodePath("../aliasInput")
theme = ExtResource( 3 )
text = "defaultUser"
align = 2

[node name="userApplyButton" type="Button" parent="userSettingsPopup"]
margin_left = 120.0
margin_top = 280.0
margin_right = 180.0
margin_bottom = 305.0
focus_next = NodePath("../usernameInput")
theme = ExtResource( 3 )
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userColor" type="LineEdit" parent="userSettingsPopup"]
margin_left = 160.0
margin_top = 100.0
margin_right = 290.0
margin_bottom = 129.0
focus_next = NodePath("../userApplyButton")
theme = ExtResource( 3 )
text = "red"
align = 2
max_length = 20

[node name="timeLabel" type="Label" parent="userSettingsPopup"]
margin_left = 10.0
margin_top = 150.0
margin_right = 160.0
margin_bottom = 170.0
theme = ExtResource( 3 )
text = "Display time stamps:"

[node name="timeBtn" type="CheckButton" parent="userSettingsPopup"]
margin_left = 210.0
margin_top = 140.0
margin_right = 286.0
margin_bottom = 180.0
pressed = true

[node name="logLocLabel" type="Label" parent="userSettingsPopup"]
margin_left = 10.0
margin_top = 190.0
margin_right = 200.0
margin_bottom = 210.0
theme = ExtResource( 3 )
text = "Network log save location:"

[node name="logLocInput" type="LineEdit" parent="userSettingsPopup"]
margin_left = 10.0
margin_top = 210.0
margin_right = 290.0
margin_bottom = 240.0
theme = ExtResource( 3 )

[node name="logLocBrowseBtn" type="Button" parent="userSettingsPopup"]
margin_left = 220.0
margin_top = 250.0
margin_right = 290.0
margin_bottom = 275.0
theme = ExtResource( 3 )
text = "Browse"

[node name="logLocPopup" type="FileDialog" parent="userSettingsPopup"]
margin_left = -90.0
margin_top = -10.0
margin_right = 410.0
margin_bottom = 340.0
window_title = "Network Save Directory"
mode_overrides_title = false
mode = 2
access = 2
current_dir = "/home/alex/Godot/IdleChat"
current_path = "/home/alex/Godot/IdleChat/"

[node name="aliasLabel" type="Label" parent="userSettingsPopup"]
margin_left = 10.0
margin_top = 60.0
margin_right = 50.0
margin_bottom = 90.0
theme = ExtResource( 3 )
text = "Alias: "
valign = 1

[node name="aliasInput" type="LineEdit" parent="userSettingsPopup"]
margin_left = 100.0
margin_top = 60.0
margin_right = 290.0
margin_bottom = 84.0
focus_next = NodePath("../userColor")
theme = ExtResource( 3 )
text = "defaultAlias"
align = 2

[node name="loadPopup" type="FileDialog" parent="."]
margin_left = 205.262
margin_top = 113.246
margin_right = 857.262
margin_bottom = 469.246
window_title = "Load Network"
resizable = true
dialog_hide_on_ok = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.dat" )
current_dir = "/home/alex/Godot/IdleChat"
current_path = "/home/alex/Godot/IdleChat/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_activated" from="connectedBox" to="." method="_on_connectedBox_item_activated"]
[connection signal="text_entered" from="inputText" to="." method="_on_inputText_text_entered"]
[connection signal="pressed" from="joinPopup/joinButton" to="." method="_on_joinButton_pressed"]
[connection signal="pressed" from="hostPopup/hostButton" to="." method="_on_hostButton_pressed"]
[connection signal="pressed" from="hostPopup/saveBrowseBtn" to="." method="_on_saveBrowseBtn_pressed"]
[connection signal="confirmed" from="hostPopup/saveDirPopup" to="." method="_on_saveDirPopup_confirmed"]
[connection signal="dir_selected" from="hostPopup/saveDirPopup" to="." method="_on_saveDirPopup_dir_selected"]
[connection signal="pressed" from="overwriteSave/yesBtn" to="." method="_on_yesBtn_pressed"]
[connection signal="pressed" from="overwriteSave/noBtn" to="." method="_on_noBtn_pressed"]
[connection signal="pressed" from="userSettingsPopup/userApplyButton" to="." method="_on_userApplyButton_pressed"]
[connection signal="pressed" from="userSettingsPopup/logLocBrowseBtn" to="." method="_on_logLocBrowseBtn_pressed"]
[connection signal="dir_selected" from="userSettingsPopup/logLocPopup" to="." method="_on_logLocPopup_dir_selected"]
[connection signal="confirmed" from="loadPopup" to="." method="_on_loadPopup_confirmed"]
